--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -28,12 +28,12 @@
             <nav class="navbar navbar-expand-lg">
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
-                  <li class="nav-item active"><a class="nav-link home link" href="index.html#"><span>0</span><span data-count="1" class="num-nav">1</span><span>.</span>HOME</a></li>
-                  <li class="nav-item"><a class="nav-link scroll link" href="index.html#about-sec"><span>0</span><span data-count="2" class="num-nav">2</span><span>.</span>ABOUT</a></li>
-                  <li class="nav-item"><a class="nav-link scroll link" href="index.html#company-portfolio-section"><span>0</span><span data-count="3" class="num-nav">3</span><span>.</span>PORTFOLIO</a></li>
-                  <li class="nav-item"><a class="nav-link scroll link" href="index.html#testimonial-sec"><span>0</span><span data-count="4" class="num-nav">4</span><span>.</span>CLIENTS</a></li>
-                  <li class="nav-item"><a class="nav-link scroll link" href="index.html#blog-sec"><span>0</span><span data-count="5" class="num-nav">5</span><span>.</span>BLOG</a></li>
-                  <li class="nav-item"><a class="nav-link scroll link" href="index.html#contact-sec"><span>0</span><span data-count="6" class="num-nav">6</span><span>.</span>CONTACT</a></li>
+                  <li class="nav-item active"><a class="nav-link home link" routerLink="/"><span>0</span><span data-count="1" class="num-nav">1</span><span>.</span>INICIO</a></li>
+                  <li class="nav-item"><a class="nav-link scroll link" href="index.html#about-sec"><span>0</span><span data-count="2" class="num-nav">2</span><span>.</span>ACERCA DE</a></li>
+                  <li class="nav-item"><a class="nav-link scroll link" routerLink="/desarrollos"><span>0</span><span data-count="3" class="num-nav">3</span><span>.</span>DESARROLLOS</a></li>
+                  <li class="nav-item"><a class="nav-link scroll link" routerLink="index.html#testimonial-sec"><span>0</span><span data-count="4" class="num-nav">4</span><span>.</span>YUCATAN</a></li>
+                  <li class="nav-item"><a class="nav-link scroll link" routerLink="index.html#blog-sec"><span>0</span><span data-count="5" class="num-nav">5</span><span>.</span>BIO</a></li>
+                  <li class="nav-item"><a class="nav-link scroll link" routerLink="/contacto"><span>0</span><span data-count="6" class="num-nav">6</span><span>.</span>CONTACTO</a></li>
                 </ul>
               </div>
             </nav>
