--- a/src/app/pages/layout/layout.component.html
+++ b/src/app/pages/layout/layout.component.html
@@ -2,7 +2,9 @@
   <div id="main-wrapper">
     <div class="main-area-width">
       <main class="main">
+        <app-header></app-header>
         <router-outlet></router-outlet>
+        <app-footer></app-footer>
       </main>
     </div>
 
