--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -1711,6 +1711,7 @@ header .main-navigation nav .navbar-nav .nav-item .nav-link.active span{
 .footer-style-1{
     background-color: #202020;
     padding: 5rem 0;
+    margin-top: 5vh;
 }
 
 .footer-social ul{
