--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -1,1 +1,9 @@
-<p>not-found works!</p>
+<div class="image-container">
+  <div class="text"><h1>404</h1></div>
+  <i class="ph-flying-saucer sticker"></i>
+  <div class="content">
+    <h2>Oops!</h2>
+    <p>La página que buscas no existe</p>
+
+    <button routerLink="/">Regresar a Inicio</button>
+  </div>
