--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -31,8 +31,8 @@
                   <li class="nav-item active"><a class="nav-link home link" routerLink="/"><span>0</span><span data-count="1" class="num-nav">1</span><span>.</span>INICIO</a></li>
                   <li class="nav-item"><a class="nav-link scroll link" href="index.html#about-sec"><span>0</span><span data-count="2" class="num-nav">2</span><span>.</span>ACERCA DE</a></li>
                   <li class="nav-item"><a class="nav-link scroll link" routerLink="/desarrollos"><span>0</span><span data-count="3" class="num-nav">3</span><span>.</span>DESARROLLOS</a></li>
-                  <li class="nav-item"><a class="nav-link scroll link" routerLink="index.html#testimonial-sec"><span>0</span><span data-count="4" class="num-nav">4</span><span>.</span>YUCATAN</a></li>
-                  <li class="nav-item"><a class="nav-link scroll link" routerLink="index.html#blog-sec"><span>0</span><span data-count="5" class="num-nav">5</span><span>.</span>BIO</a></li>
+                  <li class="nav-item"><a class="nav-link scroll link" routerLink="/yucatan"><span>0</span><span data-count="4" class="num-nav">4</span><span>.</span>YUCATAN</a></li>
+                  <li class="nav-item"><a class="nav-link scroll link" routerLink="/bio"><span>0</span><span data-count="5" class="num-nav">5</span><span>.</span>BIO</a></li>
                   <li class="nav-item"><a class="nav-link scroll link" routerLink="/contacto"><span>0</span><span data-count="6" class="num-nav">6</span><span>.</span>CONTACTO</a></li>
                 </ul>
               </div>
@@ -56,28 +56,28 @@
       <div class="container">
         <div class="row w-100 side-menu-inner-content">
           <div class="col-12 d-flex justify-content-center align-items-center">
-            <a href="index.html" class="navbar-brand"><img src="architect-studio/img/logo.png" alt="logo"></a>
+            <a routerLink="/" class="navbar-brand"><img src="assets/img/logo.png" alt="logo"></a>
           </div>
           <div class="col-12 col-lg-8">
             <nav class="side-nav w-100">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link scroll" href="index.html#home">HOME</a>
+                  <a class="nav-link scroll" routerLink="/inicio">INICIO</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link scroll" href="index.html#about-sec">ABOUT</a>
+                  <a class="nav-link scroll" routerLink="/inicio#about-sec">ACERCA DE</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link scroll" href="index.html#company-portfolio-section">PORTFOLIO</a>
+                  <a class="nav-link scroll" routerLink="/desarrollos">DESARROLLOS</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link scroll" href="index.html#testimonial-sec">CLIENTS</a>
+                  <a class="nav-link scroll" routerLink="/yucatan">YUCATAN</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link scroll" href="index.html#blog-sec">BLOG</a>
+                  <a class="nav-link scroll" routerLink="/bio">BIO</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link scroll" href="index.html#contact-sec">CONTACT</a>
+                  <a class="nav-link scroll" routerLink="/contacto">CONTACTO</a>
                 </li>
               </ul>
             </nav>
@@ -86,7 +86,7 @@
             <div class="side-footer text-white w-100">
               <div class="menu-company-details">
                 <span>+1 631 123 4567</span>
-                <span>email@website.com</span>
+                <span>monserratguerra@gmail.com</span>
               </div>
               <ul class="social-icons-simple">
                 <li><a class="facebook-text-hvr" href="javascript:void(0)"><i class="fab fa-facebook-f"></i> </a> </li>
@@ -94,7 +94,7 @@
                 <li><a class="youtube-text-hvr" href="javascript:void(0)"><i class="fab fa-youtube"></i> </a> </li>
                 <li><a class="instagram-text-hvr" href="javascript:void(0)"><i class="fab fa-instagram"></i> </a> </li>
               </ul>
-              <p class="text-white">&copy; 2023 MegaOne. Made With Love by Themesindustry</p>
+              <p class="text-white">&copy; 2023 MG Inversioines</p>
             </div>
           </div>
         </div>
