--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -618,7 +618,7 @@ header .main-navigation nav .navbar-nav .nav-item .nav-link.active span{
     top: 0;
     bottom: 0;
     /*background: rgba(247, 28, 82, 0.6);*/
-    background-image: url("../img/side-menu.jpg");
+    background-image: url("../img/yucatanBg.jpg");
     background-size: cover;
     background-position: center;
     z-index: 2032;
@@ -1711,7 +1711,7 @@ header .main-navigation nav .navbar-nav .nav-item .nav-link.active span{
 .footer-style-1{
     background-color: #202020;
     padding: 5rem 0;
-    margin-top: 5vh;
+
 }
 
 .footer-social ul{
