se agrego routerlink

--- a/src/app/pages/desarrollo/desarrollo.component.html
+++ b/src/app/pages/desarrollo/desarrollo.component.html
@@ -112,57 +112,57 @@
           <div class="row">
             <div class="col-12">
               <div class="cat_sec">
-                <h4 class="text-center text-lg-left">Categories</h4>
-                <ul>
-                  <li><a href="">ART </a> <span class="dots"></span>
-                    <p>2</p></li>
-                  <li><a href="">FASHION </a> <span class="dots"></span>
-                    <p>5</p></li>
-                  <li><a href="">PHOTOGRAPHY </a> <span class="dots"></span>
-                    <p>12</p></li>
-                  <li><a href="">LIFESTYLE </a> <span class="dots"></span>
-                    <p>22</p></li>
-                  <li><a href="">MOTIVATION </a> <span class="dots"></span>
-                    <p>1</p></li>
-                </ul>
-              </div>
-              <div class="popular_posts">
-                <h4 class="text-center text-lg-left">Popular Posts</h4>
-                <div class="media-box row">
-                  <div class="col-5 box-img">
-                    <img src="https://almaviva.mx/wp-content/uploads/2022/05/caban%CC%83a2.jpg" alt="image">
-                  </div>
-                  <div class="col-7 box-detail">
-                    <h2>Post With A Slide Images</h2>
-                    <p>July 18 , 2019 | by <span>Mark Aderson</span></p>
-                  </div>
+                <h4 class="text-center text-lg-left">Brochure</h4>
+                <div style="display: flex; text-align: center">
+                  <a href="/assets/pdf/santaClara.pdf" target="_blank">
+                    <img src="assets/img/icons/archivo-pdf.png" alt="pdf" width="60">
+                    <p style="margin-left: 5px">Descarga el Brochure técnico del proyecto</p>
+                  </a>
+
                 </div>
               </div>
+
               <div class="tags_sec">
-                <h4 class="text-center text-lg-left">Tags</h4>
+                <h4 class="text-center text-lg-left">Informacion legal</h4>
                 <div class="tags text-center text-lg-left">
-                  <span class="rounded-pill">AUDIO</span>
-                  <span class="rounded-pill">VEDIO</span>
-                  <span class="rounded-pill">BRANDINGS</span>
-                  <span class="rounded-pill">GRAPHICS</span>
-                  <span class="rounded-pill">FASHION</span>
-                  <span class="rounded-pill">DIGITAL</span>
-                  <span class="rounded-pill">SCANNING</span>
+                  <a target="_blank"
+                    href="https://www.dropbox.com/sh/0lcyz284488ryfw/AADu1O3xRfi6Heq8NxnvX0T0a/ALMAVIVA/3.%20SANTA%20CLARA%20ECOVILLAGE/4.%20INFORMACI%C3%93N%20LEGAL/ARLUGI%2C%20S.A.%20DE%20C.V.?dl=0&subfolder_nav_tracking=1">
+                    <span class="rounded-pill">ARLUGI, S.A. DE C.V. ARLUGI, S.A. DE C.V.</span>
+                  </a>
+                  <a target="_blank"
+                    href="https://www.dropbox.com/sh/0lcyz284488ryfw/AAA-lRl2hxHigeAyEtgI4hvMa/ALMAVIVA/3.%20SANTA%20CLARA%20ECOVILLAGE/4.%20INFORMACI%C3%93N%20LEGAL/CONDOMINIO%20MAESTRO?dl=0&subfolder_nav_tracking=1">
+                    <span class="rounded-pill">CONDOMINIO MAESTRO</span>
+                  </a>
                 </div>
               </div>
               <div class="cat_sec">
-                <h4 class="text-center text-lg-left">Archieves</h4>
-                <ul>
-                  <li><a href="">2 Jan , 2019 </a> <span class="dots"></span>
-                    <p>2</p></li>
-                  <li><a href="">2 Feb , 2019 </a> <span class="dots"></span>
-                    <p>5</p></li>
-                  <li><a href="">2 Mar , 2019 </a> <span class="dots"></span>
-                    <p>12</p></li>
-                  <li><a href="">2 June , 2019 </a> <span class="dots"></span>
-                    <p>22</p></li>
-                  <li><a href="">2 Aug , 2019 </a> <span class="dots"></span>
-                    <p>1</p></li>
+                <h4 class="text-center text-lg-left">Servicios Premium</h4>
+                <ul style="font-size: 80px; font-weight: bolder">
+                  <li>
+                    ⭐️ Servicio Concierge
+                  </li>
+                  <li>
+                    ⭐️ Acceso controlado
+                  </li>
+                  <li>
+                    ⭐️ Seguridad 24 / 7
+                  </li>
+                  <li>
+                    ⭐️ Servicio de Administración de la propiedad
+                  </li>
+                  <li>
+                    ⭐️ Transporte privado
+                  </li>
+                  <li>
+                    ⭐️ Enfermería
+                  </li>
+                  <li>
+                    ⭐️ Kids club y guarderia
+                  </li>
+                  <li>
+                    ⭐️ Agencia de escursiones y experiencia
+                  </li>
+
                 </ul>
               </div>
               <div class="advertisment">
