--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,3 @@
-
-
-
-
 <!--SLider sec start-->
 <section class="slider-area cursor-light">
   <div class="bg-overlay"></div>
@@ -12,7 +8,8 @@
         <div class="slider-slide">
           <div class="slider-inner-content">
             <h4 class="slide-heading">ARCHITECT <span>DIGITAL STUDIO</span></h4>
-            <p class="slide-text">Lorem ipsum is simply dummy text of the printing and typesetting. Lorem Ipsum has been the industry’s standard dummy.  Lorem Ipsum has been the industry’s standard dummy.</p>
+            <p class="slide-text">Lorem ipsum is simply dummy text of the printing and typesetting. Lorem Ipsum has been
+              the industry’s standard dummy. Lorem Ipsum has been the industry’s standard dummy.</p>
             <a href="index.html#about-sec" class="btn anim-btn rounded-pill scroll">LEARN MORE
               <span></span><span></span><span></span><span></span>
             </a>
@@ -21,16 +18,15 @@
         <div class="slider-slide">
           <div class="slider-inner-content">
             <h4 class="slide-heading">MODREN <span>CREATIVE STUDIO</span></h4>
-            <p class="slide-text">Lorem Ipsum has been the industry’s standard dummy. Lorem ipsum is simply dummy text of the printing and typesetting. Lorem Ipsum has been the industry’s standard dummy.</p>
-            <a href="index.html#about-sec" class="btn anim-btn rounded-pill scroll">LEARN MORE
-              <span></span><span></span><span></span><span></span>
-            </a>
+            <p class="slide-text">Lorem Ipsum has been the industry’s standard dummy. Lorem ipsum is simply dummy text
+              of the printing and typesetting. Lorem Ipsum has been the industry’s standard dummy.</p>
           </div>
         </div>
         <div class="slider-slide">
           <div class="slider-inner-content">
             <h4 class="slide-heading">MODERN <span>ARCHITECT WORKS</span></h4>
-            <p class="slide-text">Lorem Ipsum has been the industry’s standard dummy.  Lorem Ipsum has been the industry’s standard dummy. Lorem ipsum is simply dummy text of the printing and typesetting.</p>
+            <p class="slide-text">Lorem Ipsum has been the industry’s standard dummy. Lorem Ipsum has been the
+              industry’s standard dummy. Lorem ipsum is simply dummy text of the printing and typesetting.</p>
             <a href="index.html#about-sec" class="btn anim-btn rounded-pill scroll">LEARN MORE
               <span></span><span></span><span></span><span></span>
             </a>
@@ -50,16 +46,22 @@
       </div>
     </div>
     <div class="slider-arrows">
-      <a href="javascript:void(0);" class="slider-arr slider-arr-up link" id="slider-arr-up"><i class="fas fa-angle-up"></i></a>
-      <a href="javascript:void(0);" class="slider-arr slider-arr-down link" id="slider-arr-down"><i class="fas fa-angle-down"></i></a>
+      <a href="javascript:void(0);" class="slider-arr slider-arr-up link" id="slider-arr-up"><i
+        class="fas fa-angle-up"></i></a>
+      <a href="javascript:void(0);" class="slider-arr slider-arr-down link" id="slider-arr-down"><i
+        class="fas fa-angle-down"></i></a>
     </div>
   </div>
   <div class="slider-icons">
     <ul class="slider-social banner-social">
-      <li class="animated-wrap"><a class="animated-element" href="javascript:void(0);"><i class="fab fa-facebook-f"></i> </a></li>
-      <li class="animated-wrap"><a class="animated-element" href="javascript:void(0);"><i class="fab fa-twitter"></i>  </a></li>
-      <li class="animated-wrap"><a class="animated-element" href="javascript:void(0);"><i class="fab fa-linkedin-in"></i> </a></li>
-      <li class="animated-wrap"><a class="animated-element" href="javascript:void(0);"><i class="fab fa-instagram"></i> </a></li>
+      <li class="animated-wrap"><a class="animated-element" href="javascript:void(0);"><i class="fab fa-facebook-f"></i>
+      </a></li>
+      <li class="animated-wrap"><a class="animated-element" href="javascript:void(0);"><i class="fab fa-twitter"></i>
+      </a></li>
+      <li class="animated-wrap"><a class="animated-element" href="javascript:void(0);"><i
+        class="fab fa-linkedin-in"></i> </a></li>
+      <li class="animated-wrap"><a class="animated-element" href="javascript:void(0);"><i class="fab fa-instagram"></i>
+      </a></li>
     </ul>
   </div>
 </section>
@@ -74,36 +76,45 @@
         <div class="purple-overlay"></div>
         <div class="row no-gutters wow fadeInLeft">
           <div class="col-12 col-lg-6 services text-center">
-            <div class="service-card">
-              <div class="icon-holder">
-                <i class="lni lni-briefcase"></i>
+            <a routerLink="/desarrollo/almaviva">
+              <div class="service-card">
+                <div class="icon-holder">
+                  <i class="lni lni-briefcase"></i>
+                </div>
+                <h4 class="card-heading">ALMAVIVA</h4>
               </div>
-              <h4 class="card-heading">Make Business</h4>
-            </div>
+            </a>
+
           </div>
           <div class="col-12 col-lg-6 services text-center">
-            <div class="service-card">
-              <div class="icon-holder">
-                <i class="lni lni-bulb"></i>
+            <a routerLink="/desarrollo/terraviva">
+              <div class="service-card">
+                <div class="icon-holder">
+                  <i class="lni lni-briefcase"></i>
+                </div>
+                <h4 class="card-heading">TERRAVIVA</h4>
               </div>
-              <h4 class="card-heading">Agency Ideas</h4>
-            </div>
+            </a>
           </div>
           <div class="col-12 col-lg-6 services text-center">
-            <div class="service-card">
-              <div class="icon-holder">
-                <i class="lni lni-heart"></i>
+            <a routerLink="/desarrollo/dam">
+              <div class="service-card">
+                <div class="icon-holder">
+                  <i class="lni lni-briefcase"></i>
+                </div>
+                <h4 class="card-heading">DAM</h4>
               </div>
-              <h4 class="card-heading">Our Hardwork</h4>
-            </div>
+            </a>
           </div>
           <div class="col-12 col-lg-6 services text-center">
-            <div class="service-card">
-              <div class="icon-holder">
-                <i class="las la-wallet"></i>
+            <a routerLink="/desarrollo/bio">
+              <div class="service-card">
+                <div class="icon-holder">
+                  <i class="lni lni-briefcase"></i>
+                </div>
+                <h4 class="card-heading">ACERCA DE MG</h4>
               </div>
-              <h4 class="card-heading">Make Money</h4>
-            </div>
+            </a>
           </div>
         </div>
       </div>
@@ -112,10 +123,14 @@
           <div class="about-inner-content">
             <h4 class="heading">WE ARE <span class="text-yellow">ARCHITECT STUDIO</span></h4>
             <p class="text">
-              Lorem ipsum is simply dummy text of the printing and typesetting. Lorem Ipsum has been the industry’s standard dummy.  Lorem Ipsum has been the industry’s standard dummy. Lorem ipsum is simply dummy text of the printing and typesetting. Lorem Ipsum has been the industry’s standard dummy.  Lorem Ipsum has been the industry’s standard dummy.
+              Lorem ipsum is simply dummy text of the printing and typesetting. Lorem Ipsum has been the industry’s
+              standard dummy. Lorem Ipsum has been the industry’s standard dummy. Lorem ipsum is simply dummy text of
+              the printing and typesetting. Lorem Ipsum has been the industry’s standard dummy. Lorem Ipsum has been the
+              industry’s standard dummy.
             </p>
             <p class="text">
-              Lorem ipsum is simply dummy text of the printing and typesetting. Lorem Ipsum has been the industry’s standard dummy.  Lorem Ipsum has been the industry’s standard dummy.
+              Lorem ipsum is simply dummy text of the printing and typesetting. Lorem Ipsum has been the industry’s
+              standard dummy. Lorem Ipsum has been the industry’s standard dummy.
             </p>
             <a href="index.html#about-sec" class="btn white-trans-btn rounded-pill">LEARN MORE
               <span></span><span></span><span></span><span></span>
