Added more things

--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="row">
       <div class="col-12 col-lg-7">
-        <h4 class="heading text-center text-lg-left">GET IN TOUCH</h4>
+        <h4 class="heading text-center text-lg-left">CONTACTAME</h4>
         <form class="row contact-form wow fadeInLeft" id="contact-form-data">
           <div class="col-sm-12" id="result"></div>
           <div class="col-12 col-md-5">
@@ -23,17 +23,16 @@
       </div>
       <div class="col-12 col-lg-5 text-center text-lg-left position-relative">
         <div class="contact-details wow fadeInRight">
-          <h4 class="heading">OUR LOCATION</h4>
+          <h4 class="heading">NUESTRA UBICACIOIN</h4>
           <p class="text">
-            There are many variations of passages of Lorem Ipsum available, but the majority have suffered .
+            Ven a conocer nuestras oficinas ubicadas en:
           </p>
           <ul>
-            <li><i class="las la-map-marker addr"></i>123 Park Avenue, New York, United States </li>
+            <li><i class="las la-map-marker addr"></i>World Trade Center, Montesito 38 Piso 21 oficina 23 y 24 , Col. Nápoles, alcaldía Benito Juarez, CDMX</li>
             <li><i class="las la-phone-volume phone"></i>
-              <span>+1 631 1234 5678</span>
-              <span>+1 631 1234 5678</span>
+              <span>+52 55 35 15 71 77</span>
             </li>
-            <li><i class="las la-paper-plane email"></i>email@website.com</li>
+            <li><i class="las la-paper-plane email"></i>inversiones.inmob.mg@gmail.com</li>
           </ul>
         </div>
         <img src="assets/img/contact-background.png" class="contact-background" alt="contact">
