--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -7,60 +7,65 @@
       <div class="slider-detail col-12 col-lg-6 text-center text-lg-left wow fadeInLeft" data-wow-delay=".8s">
         <div class="slider-slide">
           <div class="slider-inner-content">
-            <h4 class="slide-heading">ARCHITECT <span>DIGITAL STUDIO</span></h4>
-            <p class="slide-text">Lorem ipsum is simply dummy text of the printing and typesetting. Lorem Ipsum has been
-              the industry’s standard dummy. Lorem Ipsum has been the industry’s standard dummy.</p>
-            <a href="index.html#about-sec" class="btn anim-btn rounded-pill scroll">LEARN MORE
+            <h4 class="slide-heading">INVERSIONES <span>INMOBILIARIAS MG</span></h4>
+            <p class="slide-text">
+
+            </p>
+            <a href="index.html#about-sec" class="btn anim-btn rounded-pill scroll">CONOCE MÁS
               <span></span><span></span><span></span><span></span>
             </a>
           </div>
         </div>
-        <div class="slider-slide">
-          <div class="slider-inner-content">
-            <h4 class="slide-heading">MODREN <span>CREATIVE STUDIO</span></h4>
-            <p class="slide-text">Lorem Ipsum has been the industry’s standard dummy. Lorem ipsum is simply dummy text
-              of the printing and typesetting. Lorem Ipsum has been the industry’s standard dummy.</p>
-          </div>
-        </div>
-        <div class="slider-slide">
-          <div class="slider-inner-content">
-            <h4 class="slide-heading">MODERN <span>ARCHITECT WORKS</span></h4>
-            <p class="slide-text">Lorem Ipsum has been the industry’s standard dummy. Lorem Ipsum has been the
-              industry’s standard dummy. Lorem ipsum is simply dummy text of the printing and typesetting.</p>
-            <a href="index.html#about-sec" class="btn anim-btn rounded-pill scroll">LEARN MORE
-              <span></span><span></span><span></span><span></span>
-            </a>
-          </div>
-        </div>
+        <!--        <div class="slider-slide">-->
+        <!--          <div class="slider-inner-content">-->
+        <!--            <h4 class="slide-heading">MODREN <span>CREATIVE STUDIO</span></h4>-->
+        <!--            <p class="slide-text">Lorem Ipsum has been the industry’s standard dummy. Lorem ipsum is simply dummy text-->
+        <!--              of the printing and typesetting. Lorem Ipsum has been the industry’s standard dummy.</p>-->
+        <!--          </div>-->
+        <!--        </div>-->
+        <!--        <div class="slider-slide">-->
+        <!--          <div class="slider-inner-content">-->
+        <!--            <h4 class="slide-heading">MODERN <span>ARCHITECT WORKS</span></h4>-->
+        <!--            <p class="slide-text">Lorem Ipsum has been the industry’s standard dummy. Lorem Ipsum has been the-->
+        <!--              industry’s standard dummy. Lorem ipsum is simply dummy text of the printing and typesetting.</p>-->
+        <!--            <a href="index.html#about-sec" class="btn anim-btn rounded-pill scroll">LEARN MORE-->
+        <!--              <span></span><span></span><span></span><span></span>-->
+        <!--            </a>-->
+        <!--          </div>-->
+        <!--        </div>-->
       </div>
       <div class="slider-img col-12 col-lg-6 wow fadeInRight" data-wow-delay=".8s" data-depth="0.1">
-        <div class="img-slide">
-          <img src="assets/img/slide1.jpg">
+        <div class="img-slide" style="height:500px; ">
+          <img src="assets/img/mon.JPG" style="object-fit:cover; padding-bottom: 200px">
         </div>
-        <div class="img-slide">
-          <img src="assets/img/slide2.jpg">
-        </div>
-        <div class="img-slide">
-          <img src="assets/img/slide3.jpg">
-        </div>
+
       </div>
     </div>
-    <div class="slider-arrows">
-      <a href="javascript:void(0);" class="slider-arr slider-arr-up link" id="slider-arr-up"><i
-        class="fas fa-angle-up"></i></a>
-      <a href="javascript:void(0);" class="slider-arr slider-arr-down link" id="slider-arr-down"><i
-        class="fas fa-angle-down"></i></a>
-    </div>
+    <!--    <div class="slider-arrows">-->
+    <!--      <a href="javascript:void(0);" class="slider-arr slider-arr-up link" id="slider-arr-up"><i-->
+    <!--        class="fas fa-angle-up"></i></a>-->
+    <!--      <a href="javascript:void(0);" class="slider-arr slider-arr-down link" id="slider-arr-down"><i-->
+    <!--        class="fas fa-angle-down"></i></a>-->
+    <!--    </div>-->
   </div>
   <div class="slider-icons">
     <ul class="slider-social banner-social">
-      <li class="animated-wrap"><a class="animated-element" href="javascript:void(0);"><i class="fab fa-facebook-f"></i>
+      <li class="animated-wrap">
+        <a class="animated-element" href="https://www.facebook.com/InverisionesInmobiliariasMG?mibextid=LQQJ4d"
+           target="_blank">
+          <i class="fab fa-facebook-f"></i>
+        </a></li>
+      <li class="animated-wrap"><a class="animated-element"
+                                   href="https://www.youtube.com/channel/UCqFSPskPJdlCXfXpswNkQbQ" target="_blank"><i
+        class="fab fa-youtube"></i>
       </a></li>
-      <li class="animated-wrap"><a class="animated-element" href="javascript:void(0);"><i class="fab fa-twitter"></i>
-      </a></li>
-      <li class="animated-wrap"><a class="animated-element" href="javascript:void(0);"><i
+      <li class="animated-wrap"><a class="animated-element"
+                                   href="https://www.linkedin.com/in/monserrat-guerra-943833116" target="_blank"><i
         class="fab fa-linkedin-in"></i> </a></li>
-      <li class="animated-wrap"><a class="animated-element" href="javascript:void(0);"><i class="fab fa-instagram"></i>
+      <li class="animated-wrap"><a class="animated-element"
+                                   href="https://instagram.com/inversiones.inmobiliarias.mg?igshid=YmMyMTA2M2Y="
+                                   target="_blank"><i
+        class="fab fa-instagram"></i>
       </a></li>
     </ul>
   </div>
@@ -76,7 +81,7 @@
         <div class="purple-overlay"></div>
         <div class="row no-gutters wow fadeInLeft">
           <div class="col-12 col-lg-6 services text-center">
-            <a routerLink="/desarrollo/almaviva">
+            <a routerLink="/desarrollos/almaviva">
               <div class="service-card">
                 <div class="icon-holder">
                   <i class="lni lni-briefcase"></i>
@@ -87,7 +92,7 @@
 
           </div>
           <div class="col-12 col-lg-6 services text-center">
-            <a routerLink="/desarrollo/terraviva">
+            <a routerLink="/desarrollos/terraviva">
               <div class="service-card">
                 <div class="icon-holder">
                   <i class="lni lni-briefcase"></i>
@@ -97,7 +102,7 @@
             </a>
           </div>
           <div class="col-12 col-lg-6 services text-center">
-            <a routerLink="/desarrollo/dam">
+            <a routerLink="/desarrollos/dam">
               <div class="service-card">
                 <div class="icon-holder">
                   <i class="lni lni-briefcase"></i>
@@ -107,7 +112,7 @@
             </a>
           </div>
           <div class="col-12 col-lg-6 services text-center">
-            <a routerLink="/desarrollo/bio">
+            <a routerLink="/desarrollos/bio">
               <div class="service-card">
                 <div class="icon-holder">
                   <i class="lni lni-briefcase"></i>
@@ -121,20 +126,12 @@
       <div class="col-12 col-lg-6 about-area padding-top padding-bottom text-center text-lg-left">
         <div class="about-content wow fadeInRight">
           <div class="about-inner-content">
-            <h4 class="heading">WE ARE <span class="text-yellow">ARCHITECT STUDIO</span></h4>
+            <h4 class="heading">SOMOS<span class="text-yellow">INVERSIONES INMOBILIARIAS MG</span></h4>
             <p class="text">
-              Lorem ipsum is simply dummy text of the printing and typesetting. Lorem Ipsum has been the industry’s
-              standard dummy. Lorem Ipsum has been the industry’s standard dummy. Lorem ipsum is simply dummy text of
-              the printing and typesetting. Lorem Ipsum has been the industry’s standard dummy. Lorem Ipsum has been the
-              industry’s standard dummy.
+              <b>IMG</b> Es una empresa con objetivo de asesoría, innovación y comercialización en Bienes y Raíces que opera en
+              estados de alta plusvalía y alto crecimiento económico.
             </p>
-            <p class="text">
-              Lorem ipsum is simply dummy text of the printing and typesetting. Lorem Ipsum has been the industry’s
-              standard dummy. Lorem Ipsum has been the industry’s standard dummy.
-            </p>
-            <a href="index.html#about-sec" class="btn white-trans-btn rounded-pill">LEARN MORE
-              <span></span><span></span><span></span><span></span>
-            </a>
+
           </div>
         </div>
       </div>
