--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -11,60 +11,96 @@
           </p>
         </div>
       </div>
-      <div class="col-12 col-lg-8">
-        <div class="team-area wow fadeInRight">
-          <div class="row no-gutters team-carousel owl-carousel owl-theme">
+      <div class="col-12 col-lg-6 offset-lg-1">
+
+        <div class="testimonial-carousel wow fadeInRight">
+          <div class="testimonial-box owl-carousel owl-theme">
             <div class="item text-center">
-              <div class="team-box">
-                <div class="img-holder position-relative">
-                  <img src="assets/img/team1.jpg">
-                  <div class="overlay d-flex justify-content-center align-items-center">
-                    <!--Team Social-->
-                    <ul class="team-social">
-                      <li><a class="facebook-text-hvr" href="javascript:void(0);"><i class="lab la-facebook-f" aria-hidden="true"></i></a></li>
-                      <li><a class="twitter-text-hvr" href="javascript:void(0);"><i class="lab la-twitter" aria-hidden="true"></i></a></li>
-                      <li><a class="instagram-text-hvr" href="javascript:void(0);"><i class="lab la-instagram" aria-hidden="true"></i></a></li>
-                      <li><a class="pinterest-text-hvr" href="javascript:void(0);"><i class="lab la-pinterest-p" aria-hidden="true"></i></a></li>
-                    </ul>
-                  </div>
-                </div>
-                <div class="team-info">
-                  <h4 class="team-name">Eden Wooderburg</h4>
-                  <p class="team-designation">Creative Head</p>
-                </div>
+              <div class="icon-holder">
+                <i class="fas fa-quote-right"></i>
               </div>
+              <p class="text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vitae egestas mi, vel dapibus diam. Mauris malesuada, nisl non rutrum commodo, sem magna laoreet tellus, eu euismod dolor enim et mi. In at tempor purus.
+              </p>
+              <div class="img-holder">
+                <a routerLink="/detalle/santa-clara">
+                  <img src="https://sakaab.com/storage/2021/10/Post-lanzamiento-ok-2-03.png">
+                </a>
+              </div>
+              <h4 class="user-name">Sara Williams</h4>
             </div>
             <div class="item text-center">
-              <div class="team-box">
-                <div class="img-holder position-relative">
-                  <img src="assets/img/team2.jpg">
-                  <div class="overlay d-flex justify-content-center align-items-center">
-                    <!--Team Social-->
-                    <ul class="team-social">
-                      <li><a class="facebook-text-hvr" href="javascript:void(0);"><i class="lab la-facebook-f" aria-hidden="true"></i></a></li>
-                      <li><a class="twitter-text-hvr" href="javascript:void(0);"><i class="lab la-twitter" aria-hidden="true"></i></a></li>
-                      <li><a class="instagram-text-hvr" href="javascript:void(0);"><i class="lab la-instagram" aria-hidden="true"></i></a></li>
-                      <li><a class="pinterest-text-hvr" href="javascript:void(0);"><i class="lab la-pinterest-p" aria-hidden="true"></i></a></li>
-                    </ul>
-                  </div>
-                </div>
-                <div class="team-info">
-                  <h4 class="team-name">Angelo Walking</h4>
-                  <p class="team-designation">Design Lead</p>
-                </div>
+              <div class="icon-holder">
+                <i class="fas fa-quote-right"></i>
               </div>
+              <p class="text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vitae egestas mi, vel dapibus diam. Mauris malesuada, nisl non rutrum commodo, sem magna laoreet tellus, eu euismod dolor enim et mi. In at tempor purus.
+              </p>
+              <div class="img-holder">
+                <a routerLink="/detalle/san-roque">
+                  <img src="https://sakaab.com/storage/2021/10/Post-lanzamiento-ok-2-03.png">
+                </a>
+              </div>
+              <h4 class="user-name">Julia Miltese</h4>
             </div>
           </div>
-
-          <a href="javascript:void(0);" class="team-nav team-prev" id="team-prev">
-            <i class="fas fa-angle-left"></i>
-          </a>
-          <a href="javascript:void(0);" class="team-nav team-next" id="team-next">
-            <i class="fas fa-angle-right"></i>
-          </a>
         </div>
+
+
       </div>
     </div>
   </div>
 </section>
 <!--Team sec End-->
+
+<!--testimonial section start-->
+<div class="testimonial-sec padding-top position-relative" id="testimonial-sec">
+  <div class="right-overlay"></div>
+  <div class="container">
+    <div class="testimonial-area padding-top padding-bottom">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-lg-5 d-flex justify-content-center align-items-center text-center text-lg-left">
+            <div class="testimonial-details wow fadeInLeft">
+              <h4 class="heading">SATISFIED <span>CUSTOMERS</span></h4>
+              <p class="text">
+                Lorem ipsum is simply dummy text of the printing and typesetting. Lorem Ipsum has been the industry’s standard dummy.
+              </p>
+            </div>
+          </div>
+          <div class="col-12 col-lg-6 offset-lg-1">
+            <div class="testimonial-carousel wow fadeInRight">
+              <div class="testimonial-box owl-carousel owl-theme">
+                <div class="item text-center">
+                  <div class="icon-holder">
+                    <i class="fas fa-quote-right"></i>
+                  </div>
+                  <p class="text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vitae egestas mi, vel dapibus diam. Mauris malesuada, nisl non rutrum commodo, sem magna laoreet tellus, eu euismod dolor enim et mi. In at tempor purus.
+                  </p>
+                  <div class="img-holder">
+                    <img src="https://sakaab.com/storage/2021/10/Post-lanzamiento-ok-2-03.png">
+                  </div>
+                  <h4 class="user-name">Sara Williams</h4>
+                </div>
+                <div class="item text-center">
+                  <div class="icon-holder">
+                    <i class="fas fa-quote-right"></i>
+                  </div>
+                  <p class="text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vitae egestas mi, vel dapibus diam. Mauris malesuada, nisl non rutrum commodo, sem magna laoreet tellus, eu euismod dolor enim et mi. In at tempor purus.
+                  </p>
+                  <div class="img-holder">
+                    <img src="https://sakaab.com/storage/2021/10/Post-lanzamiento-ok-2-03.png">
+                  </div>
+                  <h4 class="user-name">Julia Miltese</h4>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!--testimonial section end-->
